# RemoteControl

./: .gitignore  CMakeLists.txt  Event.cpp  Event.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README  README.md  Tmp.cppm  control_main.cpp  controlled_main.cpp  main.cpp
Camera/: Camera.cpp  Camera.h
Client/Control/: Control.cpp  Control.h
Client/Controlled/: Controlled.cpp  Controlled.h
Control/: Control.cpp
Controlled/: Controlled.cpp  Controlled.h
CursorAndKeys/: Cursor.cpp  Cursor.h  Keys.cpp  Keys.h
EventListener/: EventListener.cppm
MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Server/: Server.cpp  Server.h
